# microdata-metadata-service-python

./: .gitignore  .pylintrc  .test.env  CODEOWNERS  Dockerfile  README.md  SECURITY.md  azure-pipelines.yml  backstage.yaml  pyproject.toml
.github/workflows/: hello.yml  hello2.yml  hello3.yml  on-prem.yml  pr-test.yaml  test-and-build.yaml
doc/: openapi.yaml
metadata_service/: app.py
metadata_service/adapter/: datastore.py
metadata_service/api/: metadata_api.py  observability.py  openapi_docs.py  request_models.py
metadata_service/config/: environment.py  gunicorn.py  logging.py
metadata_service/domain/: metadata.py  version.py
metadata_service/exceptions/: exceptions.py
metadata_service/static/: openapi.yaml  redoc.html  redoc.standalone.js
tests/resources/fixtures/api/: data_structures.json  data_structures_no_code_list.json
tests/resources/fixtures/domain/: datastore_versions.json  draft_version.json  metadata_all.json  metadata_all_no_code_list__1_0_0_0.json  pending_operations.json
tests/unit/: conftest.py
tests/unit/api/: test_api.py  test_metadata_api.py  test_request_models.py
tests/unit/domain/: test_metadata.py
