[tool.poetry]
name = "metadata-service"
version = "0.0.1"
description = ""
authors = ["microdata developers <microdata-dev@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
json-logging = "^1.3.0"
tomlkit = "^0.11.0"
gunicorn = "^20.1.0"
pydantic = "^1.9.1"
Flask-Pydantic = "^0.9.0"
msgpack = "^1.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79