[tool.poetry]
name = "metadata-service"
version = "0.0.1"
description = ""
authors = ["microdata developers <microdata-dev@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
json-logging = "^1.3.0"
tomlkit = "^0.11.0"
gunicorn = "^21.2.0"
pydantic = "^2.6.1"
Flask-Pydantic = "^0.12.0"
msgpack = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.7.0"
pytest-dotenv = "^0.5.2"
ruff = "0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79